--- a/assets/litespeed-confs/httpd_config.conf
+++ b/assets/litespeed-confs/httpd_config.conf
@@ -13,7 +13,8 @@ mime conf/mime.properties
 showVersionNumber 0
 adminEmails root@localhost
 indexFiles index.html,index.php
-disableWebAdmin 0
+disableWebAdmin 1
+useIpInProxyHeader 2
 expires {
   enableExpires 1
   expiresByType image/*=A604800,text/css=A604800,application/x-javascript=A604800,application/javascript=A604800,font/*=A604800,application/x-font-ttf=A604800
