--- a/assets/litespeed-confs/httpd_config.conf
+++ b/assets/litespeed-confs/httpd_config.conf
@@ -13,12 +13,14 @@ mime conf/mime.properties
 showVersionNumber 0
 adminEmails root@localhost
 indexFiles index.html,index.php
-disableWebAdmin 1
+disableWebAdmin 0
 useIpInProxyHeader 2
+
 expires {
   enableExpires 1
   expiresByType image/*=A604800,text/css=A604800,application/x-javascript=A604800,application/javascript=A604800,font/*=A604800,application/x-font-ttf=A604800
 }
+
 tuning {
   maxConnections 10000
   maxSSLConnections 10000
@@ -54,6 +56,7 @@ tuning {
   quicEnable 1
   quicShmDir /dev/shm
 }
+
 accessDenyDir {
   dir /
   dir /etc/*
@@ -61,12 +64,14 @@ accessDenyDir {
   dir conf/*
   dir admin/conf/*
 }
+
 fileAccessControl {
   followSymbolLink 1
   checkSymbolLink 0
   requiredPermissionMask 000
   restrictedPermissionMask 000
 }
+
 perClientConnLimit {
   staticReqPerSec 250
   dynReqPerSec 2
@@ -78,6 +83,7 @@ perClientConnLimit {
   banPeriod 300
   blockBadReq 1
 }
+
 CGIRLimit {
   maxCGIInstances 20
   minUID 11
@@ -90,10 +96,12 @@ CGIRLimit {
   procSoftLimit 400
   procHardLimit 450
 }
+
 accessControl {
   allow ALL
   deny
 }
+
 extProcessor lsphp {
   type lsapi
   address uds://tmp/lshttpd/lsphp.sock
@@ -117,9 +125,11 @@ extProcessor lsphp {
   extUser www-data
   extGroup www-data
 }
-scriptHandler {
-  add lsapi:lsphpphp
+
+scripthandler  {
+  add lsapi:lsphp php
 }
+
 railsDefaults {
   binPath
   railsEnv 1
@@ -138,6 +148,7 @@ railsDefaults {
   procSoftLimit 500
   procHardLimit 600
 }
+
 wsgiDefaults {
   binPath
   railsEnv 1
@@ -156,6 +167,7 @@ wsgiDefaults {
   procSoftLimit 500
   procHardLimit 600
 }
+
 nodeDefaults {
   binPath
   railsEnv 1
@@ -174,6 +186,7 @@ nodeDefaults {
   procSoftLimit 500
   procHardLimit 600
 }
+
 virtualHost Example {
   vhRoot Example/
   allowSymbolLink 1
@@ -185,14 +198,17 @@ virtualHost Example {
   chrootMode 0
   configFile conf/vhosts/Example/vhconf.conf
 }
+
 vhTemplate centralConfigLog {
   templateFile conf/templates/ccl.conf
   listeners Default
 }
+
 vhTemplate EasyRailsWithSuEXEC {
   templateFile conf/templates/rails.conf
   listeners Default
 }
+
 module cache {
   ls_enabled 1
   checkPrivateCache 1
@@ -209,11 +225,7 @@ module cache {
   enablePrivateCache 0
   privateExpireInSeconds 3600
 }
-listener HTTPS {
-  address *:443
-  secure 1
-  map main*
-}
+
 errorlog /var/log/lsws/error.log {
   logLevel ERROR
   debugLevel 0
@@ -222,11 +234,13 @@ errorlog /var/log/lsws/error.log {
   compressArchive 1
   enableStderrLog 1
 }
+
 accesslog /var/log/lsws/access.log {
   rollingSize 10M
   keepDays 30
   compressArchive 1
 }
+
 extprocessor lsphp73 {
   type lsapi
   address uds://tmp/lshttpd/lsphp.sock
@@ -248,6 +262,7 @@ extprocessor lsphp73 {
   procSoftLimit 1400
   procHardLimit 1500
 }
+
 extprocessor lsphp80 {
   type lsapi
   address uds://tmp/lshttpd/lsphp.sock
@@ -269,6 +284,7 @@ extprocessor lsphp80 {
   procSoftLimit 1400
   procHardLimit 1500
 }
+
 virtualhost main {
   vhRoot /var/www/lsws_vhosts/main
   configFile $SERVER_ROOT/conf/vhosts/$VH_NAME/vhconf.conf
@@ -279,11 +295,13 @@ virtualhost main {
   user www-data
   group www-data
 }
+
 listener HTTP {
   address *:80
   secure
   map main *
 }
+
 listener HTTPS {
   address *:443
   secure 1
