--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -1,9 +1,7 @@
-phpIniOverride {
-  php_value upload_max_filesize 20M
-  memory_limit 200M
-}
+docRoot $VH_ROOT/html/
 
-errorlog /var/log/lsws/vhosts/main/error.log {
+errorlog /var/log/lsws/error.log {
+  useServer 1
   logLevel ERROR
   debugLevel 0
   rollingSize 10M
@@ -12,7 +10,8 @@ errorlog /var/log/lsws/vhosts/main/error.log {
   enableStderrLog 1
 }
 
-accesslog /var/log/lsws/vhosts/main/access.log {
+accesslog /var/log/lsws/access.log {
+  useServer 1
   rollingSize 10M
   keepDays 30
   compressArchive 1
@@ -55,4 +54,12 @@ CacheLookup public on
 </IfModule>
   END_rules
 
+}
+
+context / {
+  location /var/www/lsws_vhosts/main/html/
+  allowBrowse 1
+  rewrite {}
+  addDefaultCharset off
+  phpIniOverride {}
 }
