--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -59,6 +59,7 @@ CacheLookup public on
 context / {
   location /var/www/lsws_vhosts/main/html/
   allowBrowse 1
+  extraHeaders Header set Strict-Transport-Security: max-age=63072000; includeSubDomains; preload
   rewrite {}
   addDefaultCharset off
   phpIniOverride {}
