--- a/assets/litespeed-confs/httpd_config.conf
+++ b/assets/litespeed-confs/httpd_config.conf
@@ -13,7 +13,7 @@ mime conf/mime.properties
 showVersionNumber 0
 adminEmails root@localhost
 indexFiles index.html,index.php
-disableWebAdmin 0
+disableWebAdmin 1
 useIpInProxyHeader 2
 
 expires {
@@ -236,6 +236,7 @@ errorlog /var/log/lsws/error.log {
 }
 
 accesslog /var/log/lsws/access.log {
+  logFormat "%v %h %l %u %t \"%r\" %>s %b %D %T"
   rollingSize 10M
   keepDays 30
   compressArchive 1
