--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -42,10 +42,8 @@ rewrite  {
   enable                  1
   autoLoadHtaccess        1
   rules                   <<<END_rules
-RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteCond %{HTTP:X-Forwarded-Proto} =http
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,QSA]
 
 <IfModule LiteSpeed>
 ForceSecureCookie secure same_site_none
