block more files

--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -24,7 +24,7 @@ context exp:/.git/ {
   phpIniOverride {}
 }
 
-context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.txt|.rst {
+context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.txt|.rst|azure-pipelines.yml|.azagentrc {
   allowBrowse 0
   rewrite {}
   addDefaultCharset off
@@ -42,8 +42,8 @@ rewrite  {
   enable                  1
   autoLoadHtaccess        1
   rules                   <<<END_rules
-RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,QSA]
+# RewriteCond %{HTTPS} off
+# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,QSA]
 
 <IfModule LiteSpeed>
 ForceSecureCookie secure same_site_none
