--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -24,7 +24,7 @@ context exp:/.git/ {
   phpIniOverride {}
 }
 
-context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.txt|.rst|azure-pipelines.yml|.azagentrc {
+context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.gz|.txt|.rst|azure-pipelines.yml|.azagentrc {
   allowBrowse 0
   rewrite {}
   addDefaultCharset off
