--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -24,14 +24,7 @@ context exp:/.git/ {
   phpIniOverride {}
 }
 
-context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.gz|.txt|.rst|azure-pipelines.yml|.azagentrc {
-  allowBrowse 0
-  rewrite {}
-  addDefaultCharset off
-  phpIniOverride {}
-}
-
-context exp:/.git/|/logs?/ {
+context exp:(composer.*.json|lock)|.gitignore|package.*.json|.env|.zip|.gz|.rst|azure-pipelines.yml|.azagentrc {
   allowBrowse 0
   rewrite {}
   addDefaultCharset off
