--- a/assets/litespeed-confs/httpd_config.conf
+++ b/assets/litespeed-confs/httpd_config.conf
@@ -227,7 +227,7 @@ module cache {
 }
 
 errorlog /var/log/lsws/error.log {
-  logLevel ERROR
+  logLevel NOTICE
   debugLevel 0
   rollingSize 10M
   keepDays 30
