--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -2,7 +2,7 @@ docRoot $VH_ROOT/html/
 
 errorlog /var/log/lsws/error.log {
   useServer 1
-  logLevel ERROR
+  logLevel NOTICE
   debugLevel 0
   rollingSize 10M
   keepDays 30
