update users and permissions

--- a/assets/litespeed-confs/httpd_config.conf
+++ b/assets/litespeed-confs/httpd_config.conf
@@ -66,7 +66,7 @@ accessDenyDir {
 }
 
 fileAccessControl {
-  followSymbolLink 1
+  followSymbolLink 0
   checkSymbolLink 0
   requiredPermissionMask 000
   restrictedPermissionMask 000
@@ -122,8 +122,8 @@ extProcessor lsphp {
   memHardLimit 2047M
   procSoftLimit 1400
   procHardLimit 1500
-  extUser www-data
-  extGroup www-data
+  extUser webuser
+  extGroup webuser
 }
 
 scripthandler  {
@@ -255,8 +255,8 @@ extprocessor lsphp73 {
   path lsphp73/bin/lsphp
   backlog 100
   instances 1
-  extUser www-data
-  extGroup www-data
+  extUser webuser
+  extGroup webuser
   priority 0
   memSoftLimit 2047M
   memHardLimit 2047M
@@ -277,8 +277,8 @@ extprocessor lsphp80 {
   path lsphp80/bin/lsphp
   backlog 100
   instances 1
-  extUser www-data
-  extGroup www-data
+  extUser webuser
+  extGroup webuser
   priority 0
   memSoftLimit 2047M
   memHardLimit 2047M
@@ -287,14 +287,14 @@ extprocessor lsphp80 {
 }
 
 virtualhost main {
-  vhRoot /var/www/lsws_vhosts/main
+  vhRoot /var/www/lsws_vhosts/html
   configFile $SERVER_ROOT/conf/vhosts/$VH_NAME/vhconf.conf
   allowSymbolLink 0
   enableScript 1
   restrained 1
   setUIDMode 2
-  user www-data
-  group www-data
+  user webuser
+  group webuser
 }
 
 listener HTTP {
