--- a/assets/litespeed-confs/vhconf.conf
+++ b/assets/litespeed-confs/vhconf.conf
@@ -35,8 +35,9 @@ rewrite  {
   enable                  1
   autoLoadHtaccess        1
   rules                   <<<END_rules
-# RewriteCond %{HTTPS} off
-# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=302,L,QSA]
+# RewriteCond %{HTTPS} !on
+# RewriteCond %{HTTP:X-Forwarded-Proto} !https
+# RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
 
 <IfModule LiteSpeed>
 ForceSecureCookie secure same_site_none
